# rust-linuxtips

./: Cargo.toml  Makefile.toml  README.md
src/: main.rs
src/app/: mod.rs  router.rs
src/app/controllers/: mod.rs  root_controller.rs  status_controller.rs  todo_controller.rs
src/app/models/: liveness.rs  mod.rs  readiness.rs  todo.rs
src/initializers/: database.rs  logger.rs  mod.rs
